# lattice-snarg

./: .gitignore  AUTHORS  CMakeLists.txt  LICENSE  README.md
lattice_snarg/: CMakeLists.txt
lattice_snarg/algebra/fields/: ntlfp.hpp  ntlfp.tcc
lattice_snarg/algebra/lattice/: lattice_pp.cpp  lattice_pp.hpp  lwe.cpp  lwe.hpp  lwe_params.hpp
lattice_snarg/algebra/lattice/tests/: test_lattice.cpp
lattice_snarg/r1cs_lattice_snarg/: r1cs_lattice_ppsnarg.hpp  r1cs_lattice_ppsnarg.tcc  r1cs_lattice_ppsnarg_params.hpp
lattice_snarg/r1cs_lattice_snarg/examples/: run_r1cs_lattice_ppsnarg.hpp  run_r1cs_lattice_ppsnarg.tcc
lattice_snarg/r1cs_lattice_snarg/tests/: test_r1cs_lattice_ppsnarg.cpp
